--- a/index.html
+++ b/index.html
@@ -19,27 +19,28 @@
             <div class="form1">
                 <form>
                     <b>Nome completo:</b> <br>
-                    <input type="text" name="nome" placeholder="Exemplo: José Silva"/><br><br>
+                    <input type="text" name="nome" placeholder=" Exemplo: José Silva"/><br><br>
                     <b>CPF:</b> <br>
-                    <input type="number" name="CPF" placeholder="Exemplo: 111.111.111-11"/><br><br>
+                    <input type="number" name="CPF" placeholder=" Exemplo: 111.111.111-11"/><br><br>
                     <b>Data de Nascimento:</b><br>
-                    <input type="date" name="nascimento" /><br>
-                    <b>Gênero:</b><br>
-                    <input type="radio" name="genero" value="masculino"/>
-                    <label for="masculino">Masculino</label><br>
-                    <input type="radio" name="genero" value="feminino"/>
-                    <label for="feminino">Feminino</label><br>
-                    <input type="radio" name="genero" value="outro"/>
-                    <label for="outro">Outro</label><br>
+                    <input type="date" name="nascimento"/><br><br>
                     <b>Profissão:</b> <br>
-                    <input type="text" name="profissão" placeholder="Exemplo: Professor"/><br>
-
+                    <input type="text" name="profissão" placeholder=" Exemplo: Professor"/><br><br>
+                    <div class="radio-div">
+                        <b>Gênero:</b>
+                        <input class="radio" type="radio" name="genero" value="masculino"/>
+                        <label class="option-label" for="masculino">Masculino</label><br><br>
+                        <input class="radio" type="radio" name="genero" value="feminino"/>
+                        <label class="option-label" for="feminino">Feminino</label><br><br>
+                        <input class="radio" type="radio" name="genero" value="outro"/>
+                        <label class="option-label" for="outro">Outro</label><br><br>
+                    </div>
                 </form>
             </div>
             <div class="form2">
                 <form>
                     <b>Nome completo do(a) Genitor(a):</b> <br>
-                    <input type="text" name="nome genitor" placeholder="Exemplo: Maria Silva"/><br>
+                    <input type="text" name="nome genitor" placeholder=" Exemplo: Maria Silva"/><br><br>
                     <b>Estado (UF):</b> <br>
                     <select>
                         <option>AC</option>
@@ -69,11 +70,11 @@
                         <option>SP</option>
                         <option>SE</option>
                         <option>TO</option>
-                    </select> <br>
+                    </select> <br> <br>
                     <b>Telefone:</b><br>
-                    <input type="tel" name="telefone" placeholder="Exemplo: (011) 91111-1111"><br>
+                    <input type="tel" name="telefone" placeholder=" Exemplo: (011) 91111-1111"><br><br>
                     <b>E-mail:</b> <br>
-                    <input type="email" name="email" placeholder="exemplo@mail.com"><br>
+                    <input type="email" name="email" placeholder=" exemplo@mail.com"><br><br>
 
                 </form>
             </div>
