ajustes nos inputs, adição de botoes, rodape

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <form>
                     <b>Nome completo do(a) Genitor(a):</b> <br>
                     <input type="text" name="nome genitor" placeholder=" Exemplo: Maria Silva"/><br><br>
-                    <b>Estado (UF):</b> <br>
+                    <b>Estado (UF):</b>
                     <select>
                         <option>AC</option>
                         <option>AL</option>
@@ -75,10 +75,16 @@
                     <input type="tel" name="telefone" placeholder=" Exemplo: (011) 91111-1111"><br><br>
                     <b>E-mail:</b> <br>
                     <input type="email" name="email" placeholder=" exemplo@mail.com"><br><br>
-
+                    <div class="botoes">
+                        <input type="reset" value="Limpar"/>
+                        <input type="submit" name="cadastrar" value="Cadastrar"/>
+                    </div>
                 </form>
             </div>
         </div>
     </section>
 </body>
+<footer>
+    Desenvolvido por Ana Lívia.
+</footer>
 </html>
