botão limpar consertado

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         </div>
     </header>
     <section>
-        <div class="register-info">
-            <div class="form1">
-                <form>
+            <form class="register-info">
+                <div class="form1">
                     <b>Nome completo:</b> <br>
                     <input type="text" name="nome" placeholder=" Exemplo: José Silva"/><br><br>
                     <b>CPF:</b> <br>
@@ -35,10 +34,8 @@
                         <input class="radio" type="radio" name="genero" value="outro"/>
                         <label class="option-label" for="outro">Outro</label><br><br>
                     </div>
-                </form>
-            </div>
-            <div class="form2">
-                <form>
+                </div>
+                <div class="form2">
                     <b>Nome completo do(a) Genitor(a):</b> <br>
                     <input type="text" name="nome genitor" placeholder=" Exemplo: Maria Silva"/><br><br>
                     <b>Estado (UF):</b>
@@ -79,9 +76,8 @@
                         <input type="reset" value="Limpar"/>
                         <input type="submit" name="cadastrar" value="Cadastrar"/>
                     </div>
-                </form>
-            </div>
-        </div>
+                </div>
+            </form>
     </section>
 </body>
 <footer>
