icones, ajustes de espaçamento no placeholder e seletor

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <form class="register-info">
                 <div class="form1">
                     <b>Nome completo:</b> <br>
-                    <input type="text" name="nome" placeholder=" Exemplo: José Silva"/><br><br>
+                    <input type="text" name="nome" placeholder="Exemplo: José Silva"/><br><br>
                     <b>CPF:</b> <br>
-                    <input type="number" name="CPF" placeholder=" Exemplo: 111.111.111-11"/><br><br>
+                    <input type="number" name="CPF" placeholder="Exemplo: 111.111.111-11"/><br><br>
                     <b>Data de Nascimento:</b><br>
                     <input type="date" name="nascimento"/><br><br>
                     <b>Profissão:</b> <br>
-                    <input type="text" name="profissão" placeholder=" Exemplo: Professor"/><br><br>
+                    <input type="text" name="profissão" placeholder="Exemplo: Professor"/><br><br>
                     <div class="radio-div">
                         <b>Gênero:</b>
                         <input class="radio" type="radio" name="genero" value="masculino"/>
@@ -37,7 +37,7 @@
                 </div>
                 <div class="form2">
                     <b>Nome completo do(a) Genitor(a):</b> <br>
-                    <input type="text" name="nome genitor" placeholder=" Exemplo: Maria Silva"/><br><br>
+                    <input type="text" name="nome genitor" placeholder="Exemplo: Maria Silva"/><br><br>
                     <b>Estado (UF):</b>
                     <select>
                         <option>AC</option>
@@ -69,9 +69,9 @@
                         <option>TO</option>
                     </select> <br> <br>
                     <b>Telefone:</b><br>
-                    <input type="tel" name="telefone" placeholder=" Exemplo: (011) 91111-1111"><br><br>
+                    <input type="tel" name="telefone" placeholder="Exemplo: (011) 91111-1111"><br><br>
                     <b>E-mail:</b> <br>
-                    <input type="email" name="email" placeholder=" exemplo@mail.com"><br><br>
+                    <input type="email" name="email" placeholder="exemplo@mail.com"><br><br>
                     <div class="botoes">
                         <input type="reset" value="Limpar"/>
                         <input type="submit" name="cadastrar" value="Cadastrar"/>
@@ -82,5 +82,10 @@
 </body>
 <footer>
     Desenvolvido por Ana Lívia.
+    <div class="icons">
+        <a href="https://www.instagram.com/al_sg_/"><img src="images/ig.png"></a>
+        <a href="https://github.com/aliviasg"><img src="images/git.png"></a>
+        <a href="https://www.linkedin.com/in/ana-líviasgomes"><img src="images/linkedin.png"></a>
+      </div>
 </footer>
 </html>
